# ChanceScript

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: ChanceScript.h  Dist.h  MakeDist.h  Matrix.h  Utilities.h
src/: ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  interpret.cpp  main.cpp
tests/: test_main.cpp
